--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 
 {
     "description": 	"This repository contains Aspose Cloud SDK for PHP source code. This SDK allows you to work with Aspose Cloud REST API in your PHP applications quickly and easily.",
-    "name": 		"aspose/php",
+    "name": 		"aspose/cloud-sdk-php",
     "type": 		"library",
     "keywords" : 	["aspose", "php", "aspose cloud"],
 	"homepage": 	"https://github.com/asposeforcloud/Aspose_Cloud_SDK_For_PHP",
