--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,3 @@
-
 {
     "description": 	"This repository contains Aspose Cloud SDK for PHP source code. Aspose Cloud SDK for PHP lets PHP developers convert and process a variety of file formats in the cloud quickly and easily.",
     "name": 		"aspose/cloud-sdk-php",
@@ -13,7 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "symfony/event-dispatcher": ">=2.0"
     },
     "autoload": {
         "psr-0": {
