--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": ">=5.3.2",
         "ext-curl": "*",
-        "symfony/event-dispatcher": ">=2.0"
+        "symfony/event-dispatcher": ">=2.0",
+        "psr/log": "~1.0"
     },
     "autoload": {
         "psr-0": {
