--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
+        "php": ">=5.3.2|^7.0",
         "ext-curl": "*",
-        "symfony/event-dispatcher": "~2.0",
-        "symfony/options-resolver": "~2.0",
+        "symfony/event-dispatcher": "~2.0|^3.0|^4.0",
+        "symfony/options-resolver": "~2.0|^3.0|^4.0",
         "psr/log": "~1.0"
     },
     "autoload": {
